--- a/src/homepage.html
+++ b/src/homepage.html
@@ -2,21 +2,28 @@
 <html lang="en">
 <head>
     <title>Tiffin Box Service</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AR&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AR&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header | use IDs to jump in the page -->
-    <header>
-        <h1>Tiffin Box Service</h1>
-        <nav>
-            <ul>
-                <li><a href="homepage.html">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#plans">Plans</a></li>
-                <li><a href="#Contact">Contact</a></li>
-                <li><a href="sign_in.html">Sign In</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div id="heading-name">
+        <header>
+            <h1>Tiffin Box Service</h1>
+            <nav>
+                <ul>
+                    <li><a href="homepage.html">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#plans">Plans</a></li>
+                    <li><a href="#Contact">Contact</a></li>
+                    <li><a href="sign-in.html">Sign In</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+
+    <a href="#heading-name"> <img id="top" src="\pics\top-arrow.png"></a>
     
     <!-- Welcome Section -->
     <section id="welcome">
