changed href to correct filename

--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -20,7 +20,7 @@
         </select><br><br>
         <a href="homepage.html"><input type="submit" value="Sign In" ></a>
         <div><br><br>
-        <a href="register.html">Create new Account</a>
+        <a href="sign-up.html">Create new Account</a>
         
         </div>
 </body>
