--- a/src/homepage.html
+++ b/src/homepage.html
@@ -16,7 +16,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#plans">Plans</a></li>
                 <li><a href="#Contact">Contact</a></li>
-                <li><a href="sign_in.html">Sign In</a></li>
+                <li><a href="sign-in.html">Sign In</a></li>
             </ul>
         </nav>
     </header>
