added inline, internal, and external CSS. also created a styles.css file mainly done for homepage only

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -2,6 +2,28 @@
 <html lang="en">
 <head>
     <title>Tiffin Box Service</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        h1 {
+            color: darkblue;
+            font-size: 36px;
+        }
+
+        h2 {
+            color: #2F4F4F;
+            font-size: 28px;
+        }
+
+        h3 {
+            color: #8B0000;
+            font-size: 24px;
+        }
+
+        caption {
+            font-size: 14px;
+            color: grey;
+        }
+    </style>
 </head>
 <body>
     <!-- Header | use IDs to jump in the page -->
@@ -23,7 +45,7 @@
     
     <!-- Welcome Section -->
     <section id="welcome">
-        <h2>Welcome to Our Tiffin Box Service</h2>
+        <h2 style="color: green;">Welcome to Our Tiffin Box Service</h2>    <!--INLINE CSS-->
         <p>We provide delicious and healthy meals delivered to your doorstep.</p>
         <h3>Why Choose Us?</h3>
         <ul>
@@ -33,11 +55,12 @@
             <li>Affordable Prices</li>
         </ul>
     </section>
+
     <section id="about">
         <h2>About Our Service</h2>
-        <img src="pics\about us.jpg" alt="Delicious Tiffin Box">
+        <img src="pics\about us.jpg" alt="Delicious Tiffin Box" style="border: 2px solid #ccc;">
         <caption>Delicious Tiffin Box</caption>
-        <img src="pics\tiffin.jpg" alt="Healthy Ingredients">
+        <img src="pics\tiffin.jpg" alt="Healthy Ingredients" style="border: 2px solid #ccc;">
         <caption>Fresh and Healthy Ingredients</caption>
     </section>
     
