--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <title>Sign-Up Page</title>
+    <style>
+        h1 {
+            color: darkblue;
+            font-size: 36px;
+        }
+    </style>
 </head>
 <body>
     <form action="">
