--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -2,26 +2,30 @@
 <html lang="en">
 <head>
     <title>Tiffin Box Assistant | Sign In</title>
+    <style>
+        h1 {
+            color: darkblue;
+            font-size: 36px;
+        }
+    </style>
 </head>
 <body>
         <div style="text-align:center">
-
             <img src="user.jpg" alt="User" style="width:200px;height:200px;"><br><br>
-        <label for="sign-in" style="font-size:30px;">
-            <b>Sign In</b>
-        </label><br><br>
-        <input type="text" placeholder="Username" required><br><br>
-        <input type="password" placeholder="Password" required><br><br>
-        <label for="">Role:</label>
-        <select required>
-            <option value="User">User</option>
-            <option value="Cook">Cook</option>
-            <option value="Admin">Admin</option>
-        </select><br><br>
-        <a href="homepage.html"><input type="submit" value="Sign In" ></a>
-        <div><br><br>
-        <a href="sign-up.html">Create new Account</a>
-        
+            <label for="sign-in" style="font-size:30px;">
+                <b>Sign In</b>
+            </label><br><br>
+                <input type="text" placeholder="Username" required><br><br>
+                <input type="password" placeholder="Password" required><br><br>
+                <label for="">Role:</label>
+            <select required>
+                <option value="User">User</option>
+                <option value="Cook">Cook</option>
+                <option value="Admin">Admin</option>
+            </select><br><br>
+            <a href="homepage.html"><input type="submit" value="Sign In" ></a>
+            <div><br><br>
+            <a href="sign-up.html">Create new Account</a>
         </div>
 </body>
 </html>
