--- a/src/homepage.html
+++ b/src/homepage.html
@@ -29,7 +29,7 @@
     <!-- Header | use IDs to jump in the page -->
     <header>
         <a href="homepage.html">
-            <img src="pics\logo.png" alt="Tiffin Box Service Logo">
+            <img src="../pics/logo.png" alt="Tiffin Box Service Logo" style="width: 50px;">
         </a>        
         <h1>Tiffin Box Service</h1>
         <nav>
@@ -58,7 +58,7 @@
 
     <section id="about">
         <h2>About Our Service</h2>
-        <img src="pics\about us.jpg" alt="Delicious Tiffin Box" style="border: 2px solid #ccc;">
+        <img src="../pics/about us.jpg" alt="Delicious Tiffin Box" style="border: 2px solid #ccc;">
         <caption>Delicious Tiffin Box</caption>
         <img src="pics\tiffin.jpg" alt="Healthy Ingredients" style="border: 2px solid #ccc;">
         <caption>Fresh and Healthy Ingredients</caption>
