--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Sign-Up Page</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         h1 {
             color: darkblue;
@@ -10,60 +11,81 @@
     </style>
 </head>
 <body>
-    <form action="">
-        <div style="text-align:center">
-            <img src="user.jpg" alt="User" style="width:200px;height:200px;"><br><br>
-            <label for="" style="font-size:30px;"><b>Sign-Up</b></label><br><br>
-            <label for="">First Name : </label>
-            <input type="text" required><br><br>
-            <label for="">Last Name : </label>
-            <input type="text" required><br><br>
-            <label for="">Address : </label>
-            <textarea required></textarea><br><br>
-            <label for="">Gender : </label><br><br>
-            <input type="radio" name="gen">Male<br><br>
-            <input type="radio" name="gen">Female<br><br>
-            <input type="radio" name="gen">Other<br><br>
-            <label for="">Date of Birth : </label>
-            <input type="date" required><br><br>
-            <label for="">Probable meal type : </label><br><br>
-            <input type="checkbox" name="break">Breakfast<br><br>
-            <input type="checkbox" name="lunch">Lunch<br><br>
-            <input type="checkbox" name="dinner">Dinner<br><br>
-            <label for="preferredDelivery">Preferred Delivery Date & Time:</label>
-            <input type="datetime-local" required><br><br>
-            <label for="numberOfMeals">Number of Meals you wish to order:</label>
-            <input type="number" min="1" required><br><br>  
-            <label for="">Profile Photo : </label>
-            <input type="file" required><br><br>
-            <label for="">Email : </label>
-            <input type="text" required><br><br>
-            <label for="">Username : </label>
-            <input type="text" required><br><br>
-            <label for="">Set Password : </label>
-            <input type="password" required><br><br>
-            <label for="">Confirm Password : </label>
-            <input type="password" required><br><br>
-            <label for="">Role : </label>
-            <select required>
+    <div class="center-container">
+        <img src="user.jpg" alt="User" style="width:200px;height:200px;"><br><br>
+
+        <label for="" style="font-size:30px;"><b>Sign-Up</b></label><br><br>
+
+        <form action="register.php" method="post"> <!-- Placeholder action -->
+            <label for="fname">First Name:</label>
+            <input type="text" id="fname" name="fname" required><br><br>
+
+            <label for="lname">Last Name:</label>
+            <input type="text" id="lname" name="lname" required><br><br>
+
+            <label for="address">Address:</label>
+            <textarea id="address" name="address" required></textarea><br><br>
+
+            <label>Gender:</label><br>
+            <input type="radio" name="gender" value="Male">Male<br>
+            <input type="radio" name="gender" value="Female">Female<br>
+            <input type="radio" name="gender" value="Other">Other<br><br>
+
+            <label for="dob">Date of Birth:</label>
+            <input type="date" id="dob" name="dob" required><br><br>
+
+            <label for="mealType">Probable meal type:</label><br>
+            <input type="checkbox" name="mealType" value="Breakfast">Breakfast<br>
+            <input type="checkbox" name="mealType" value="Lunch">Lunch<br>
+            <input type="checkbox" name="mealType" value="Dinner">Dinner<br><br>
+
+            <label for="delivery">Preferred Delivery Date & Time:</label>
+            <input type="datetime-local" id="delivery" name="delivery" required><br><br>
+
+            <label for="meals">Number of Meals you wish to order:</label>
+            <input type="number" id="meals" name="meals" min="1" required><br><br>
+
+            <label for="photo">Profile Photo:</label>
+            <input type="file" id="photo" name="photo" required><br><br>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br><br>
+
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required><br><br>
+
+            <label for="password">Set Password:</label>
+            <input type="password" id="password" name="password" required><br><br>
+
+            <label for="confirm_password">Confirm Password:</label>
+            <input type="password" id="confirm_password" name="confirm_password" required><br><br>
+
+            <label for="role">Role:</label>
+            <select id="role" name="role" required>
                 <option value="">----</option>
-                <option value="">User</option>
-                <option value="">Admin</option>
-                <option value="">Cook</option>
+                <option value="User">User</option>
+                <option value="Admin">Admin</option>
+                <option value="Cook">Cook</option>
             </select><br><br>
-            <label for="">Favourite color for tiffin box : </label>
-            <input type="color" required><br><br>
-            <label for="">Url of Social Media Profile:</label>
-            <input type="url" required ><br><br>
-            <label for="">Rate our website design (1-10):</label>
-            <input type="range" min="1" max="10" required><br><br>
-            <label for="">Search for Meal Options:</label>
-            <input type="search"><br><br>
-            <label for="">Preferred Delivery Time:</label>
-            <input type="time" required><br><br>
-            <a href="homepage.html"><input type="button" value="Sign-up"></a>
+
+            <label for="color">Favourite color for tiffin box:</label>
+            <input type="color" id="color" name="color" required><br><br>
+
+            <label for="socialUrl">Url of Social Media Profile:</label>
+            <input type="url" id="socialUrl" name="socialUrl" required><br><br>
+
+            <label for="rating">Rate our website design (1-10):</label>
+            <input type="range" id="rating" name="rating" min="1" max="10" required><br><br>
+
+            <label for="searchMeal">Search for Meal Options:</label>
+            <input type="search" id="searchMeal" name="searchMeal"><br><br>
+
+            <label for="preferredTime">Preferred Delivery Time:</label>
+            <input type="time" id="preferredTime" name="preferredTime" required><br><br>
+
+            <input type="submit" value="Sign-up">
             <input type="reset" value="Reset">
-        </div>
-    </form>
+        </form>
+    </div>
 </body>
 </html>
