added user icon and changed some css

--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="center-container">
-        <img src="user.jpg" alt="User" style="width:200px;height:200px;"><br><br>
+        <img src="../pics/user.png" alt="User" style="width:200px;height:200px;"><br><br>
 
         <label for="" style="font-size:30px;"><b>Sign-Up</b></label><br><br>
 
