--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="center-container">
-        <img src="user.jpg" alt="User" style="width:200px;height:200px;"><br><br>
+        <img src="../pics/user.png" alt="User" style="width:200px;height:200px;"><br><br>
         
         <label for="sign-in" style="font-size:30px;">
             <b>Sign In</b>
