--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -13,20 +13,25 @@
 	<script>
 		function f1() 
         {
+            var isValid = true;
+
             // Validating first and last name
             var fname = document.getElementById("fname").value;
             var lname = document.getElementById("lname").value;
             if (fname === "") {
                 alert("First name cannot be empty");
+                isValid = false
             }
             if (lname === "") {
                 alert("Last name cannot be empty");
+                isValid = false
             }
 
             // Validating the drop-down menu
             var role = document.getElementById("role").value;
             if (role === "") {
                 alert("Please select your role");
+                isValid = false
             }
 
             // Validating radio buttons for Year
@@ -41,6 +46,7 @@
 
             if (!yearSelected) {
                 alert("Please select your Year");
+                isValid = false
             }
 
             // Validating username (e.g., COMP followed by 2 digits)
@@ -48,28 +54,34 @@
             var unamePattern = /^[a-zA-Z]{5}[0-9]{2}$/;
             if (!unamePattern.test(uname)) {
                 alert("Invalid username");
+                isValid = false
             }
 
             // Validating password
             var password = document.getElementById("password").value;
             if (password.length < 6 || password.length > 10) {
                 alert("Password size should be between 6 to 10 characters");
+                isValid = false
             }
 
             if (!/[a-z]/.test(password)) {
                 alert("Password must contain at least one lowercase character");
+                isValid = false
             }
 
             if (!/[A-Z]/.test(password)) {
                 alert("Password must contain at least one uppercase character");
+                isValid = false
             }
 
             if (!/[0-9]/.test(password)) {
                 alert("Password must contain at least one digit");
+                isValid = false
             }
 
             if (!/[\@\#\$\%\&\;\:\.\,]/.test(password)) {
                 alert("Password must contain at least one special character");
+                isValid = false
             }
 
             // Validating phone number
@@ -77,6 +89,7 @@
             var phonePattern = /^[789][0-9]{9}$/;
             if (!phonePattern.test(phone)) {
                 alert("Invalid phone number. Must be 10 digits starting with 7, 8, or 9");
+                isValid = false
             }
 
             // Validating email
@@ -84,9 +97,11 @@
             var emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
             if (!emailPattern.test(email)) {
                 alert("Invalid email address");
+                isValid = false
             }
 
             // Display the entered data if all validations are successful
+            if (isValid){
             var successMessage = "Form submitted successfully!" +
                   "<br>First Name: " + fname + 
                   "<br>Last Name: " + lname + 
@@ -95,10 +110,10 @@
                   "<br>Email: " + email;
             
             document.getElementById("pop_messg").innerHTML = successMessage;
-            return true;
+            return true; //this will allow form to submit
+            }
 
-            // Redirect to home page
-            window.location.href = "homepage.html"; // Change to your home page file
+            return false;
         }
 
 	</script>
@@ -109,7 +124,7 @@
 
         <label for="" style="font-size:30px;"><b>Sign-Up</b></label><br><br>
 
-        <form action="register.php" method="post" onsubmit="f1()"> <!-- Placeholder action -->
+        <form action="register.php" method="post" enctype="multipart/form-data" onsubmit="return f1()"> <!-- Placeholder action -->
             <label for="fname">First Name:</label>
             <input type="text" id="fname" name="fname" required><br><br>
 
