--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -14,106 +14,90 @@
 		function f1() 
         {
             var isValid = true;
+            var messages = [];
 
             // Validating first and last name
             var fname = document.getElementById("fname").value;
             var lname = document.getElementById("lname").value;
+
             if (fname === "") {
-                alert("First name cannot be empty");
-                isValid = false
+                messages.push("First name cannot be empty");
+                isValid = false;
             }
             if (lname === "") {
-                alert("Last name cannot be empty");
-                isValid = false
+                messages.push("Last name cannot be empty");
+                isValid = false;
             }
 
             // Validating the drop-down menu
             var role = document.getElementById("role").value;
             if (role === "") {
-                alert("Please select your role");
-                isValid = false
+                messages.push("Please select your role");
+                isValid = false;
             }
 
-            // Validating radio buttons for Year
-            var yearElements = document.getElementsByName("mealType");
-            var yearSelected = false;
-            for (var i = 0; i < yearElements.length; i++) {
-                if (yearElements[i].checked) {
-                    yearSelected = true;
-                    break;
-                }
-            }
-
-            if (!yearSelected) {
-                alert("Please select your Year");
-                isValid = false
+            // Validating date of birth
+            var dob = document.getElementById("dob").value;
+            if (dob === "") {
+                messages.push("Please select your Date of Birth");
+                isValid = false;
             }
 
             // Validating username (e.g., COMP followed by 2 digits)
             var uname = document.getElementById("username").value;
             var unamePattern = /^[a-zA-Z]{5}[0-9]{2}$/;
             if (!unamePattern.test(uname)) {
-                alert("Invalid username");
-                isValid = false
+                messages.push("Invalid username");
+                isValid = false;
             }
 
             // Validating password
             var password = document.getElementById("password").value;
             if (password.length < 6 || password.length > 10) {
-                alert("Password size should be between 6 to 10 characters");
-                isValid = false
+                messages.push("Password size should be between 6 to 10 characters");
+                isValid = false;
             }
 
             if (!/[a-z]/.test(password)) {
-                alert("Password must contain at least one lowercase character");
-                isValid = false
+                messages.push("Password must contain at least one lowercase character");
+                isValid = false;
             }
 
             if (!/[A-Z]/.test(password)) {
-                alert("Password must contain at least one uppercase character");
-                isValid = false
+                messages.push("Password must contain at least one uppercase character");
+                isValid = false;
             }
 
             if (!/[0-9]/.test(password)) {
-                alert("Password must contain at least one digit");
-                isValid = false
+                messages.push("Password must contain at least one digit");
+                isValid = false;
             }
 
             if (!/[\@\#\$\%\&\;\:\.\,]/.test(password)) {
-                alert("Password must contain at least one special character");
-                isValid = false
+                messages.push("Password must contain at least one special character");
+                isValid = false;
             }
 
-            // Validating phone number
-            var phone = document.getElementById("pn").value;
-            var phonePattern = /^[789][0-9]{9}$/;
-            if (!phonePattern.test(phone)) {
-                alert("Invalid phone number. Must be 10 digits starting with 7, 8, or 9");
-                isValid = false
+            var confirmPassword = document.getElementById("confirm_password").value;
+            if (password !== confirmPassword) {
+                messages.push("Passwords do not match");
+                isValid = false;
             }
 
             // Validating email
             var email = document.getElementById("email").value;
             var emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
             if (!emailPattern.test(email)) {
-                alert("Invalid email address");
-                isValid = false
+                messages.push("Invalid email address");
+                isValid = false;
             }
 
-            // Display the entered data if all validations are successful
-            if (isValid){
-            var successMessage = "Form submitted successfully!" +
-                  "<br>First Name: " + fname + 
-                  "<br>Last Name: " + lname + 
-                  "<br>Username: " + uname + 
-                  "<br>Phone: " + phone + 
-                  "<br>Email: " + email;
-            
-            document.getElementById("pop_messg").innerHTML = successMessage;
-            return true; //this will allow form to submit
+            //show the erros at once all together
+            if(!isValid){
+                alert(messages.join("\n"));
             }
 
-            return false;
+            return isValid;
         }
 
 	</script>
@@ -124,7 +108,7 @@
 
         <label for="" style="font-size:30px;"><b>Sign-Up</b></label><br><br>
 
-        <form action="register.php" method="post" enctype="multipart/form-data" >   <!-- onsubmit="return f1()"  Placeholder action -->
+        <form action="register.php" method="post" enctype="multipart/form-data" onsubmit="return f1()">   <!-- onsubmit="return f1()"  Placeholder action -->
             <label for="fname">First Name:</label>
             <input type="text" id="fname" name="fname" required><br><br>
 
