Admin side has been created and necessary JS and php has been added.

--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -91,7 +91,11 @@
                 messages.push("Invalid email address");
                 isValid = false;
             }
-
+            var address = document.getElementById("address").value;
+            if (address === "") {
+                messages.push("Address cannot be empty");
+                isValid = false;
+            }
             //show the erros at once all together
             if(!isValid){
                 alert(messages.join("\n"));
