--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -153,9 +153,8 @@
             <label for="role">Role:</label>
             <select id="role" name="role" required>
                 <option value="">----</option>
-                <option value="User">User</option>
+                <option value="Customer">Customer</option>
                 <option value="Admin">Admin</option>
-                <option value="Cook">Cook</option>
             </select><br><br>
 
             <input type="submit" value="Sign-up">
