--- a/src/add-plan.html
+++ b/src/add-plan.html
@@ -60,6 +60,26 @@
             padding: 15px;
             text-align: center;
         }
+        /* Set html and body to 100% height */
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Flex container for the entire page */
+        .container {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        /* Main content flex */
+        .content {
+            flex: 1;
+        }
     </style>
 
     <script>
@@ -96,8 +116,17 @@
     </script>
 </head>
 <body>
-    <h1>Add Meal Plan</h1>
-    <form action="addmeal.php" method="POST" onsubmit="return f1()" >
+    <header>
+        <h1>Admin Dashboard - Tiffin Box Service</h1>
+        <nav>
+            <ul>
+                <li><a href="admin_homepage.php">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="content">
+        <h1>Add Meal Plan</h1>
+        <form action="addmeal.php" method="POST" onsubmit="return f1()" >
         <label for="planName">Plan Name</label>
         <input type="text" id="planName" name="planName" required>
 
@@ -109,5 +138,10 @@
 
         <button type="submit" class="submit-button">Add Meal Plan</button>
     </form>
+    </div>
+    
+    <footer>
+        <p>Admin Contact: admin@tiffinboxservice.com</p>
+    </footer>
 </body>
 </html>
